--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weather.app",
   "private": true,
-  "homepage": "https://github.com/Shan-Kins/weather.app",
+  "homepage": "https://shan-kins.github.io/weather.app",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
